--- a/SpringVaadinWeahterApp/.travis.yml
+++ b/SpringVaadinWeahterApp/.travis.yml
@@ -1,5 +1,12 @@
-
 language: java
-install: true
-install: ./install-dependencies.sh
-script: ./mvnw clean install spring-boot:run -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+jdk:
+- oraclejdk8
+# git strips the wrapper jar file so we have to force its download during the build
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+after_success:
+- bash <(curl -s https://codecov.io/bash)
+- mvn clean test jacoco:report coveralls:report
+notifications:
+  email: false
