--- a/SpringVaadinWeahterApp/.travis.yml
+++ b/SpringVaadinWeahterApp/.travis.yml
@@ -1,12 +1,3 @@
 language: java
-jdk:
-- oraclejdk8
-# git strips the wrapper jar file so we have to force its download during the build
-install:
-- mvn -N io.takari:maven:wrapper
-- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-after_success:
-- bash <(curl -s https://codecov.io/bash)
-- mvn clean test jacoco:report coveralls:report
-notifications:
-  email: false
+sudo: false
+script: mvn clean verify
