--- a/JavaOdevi/.travis.yml
+++ b/JavaOdevi/.travis.yml
@@ -1,4 +1,5 @@
 language: java
-install: true
-install: ./install-dependencies.sh
-script: ./mvnw clean install spring-boot:run -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
