--- a/JavaOdevi/.travis.yml
+++ b/JavaOdevi/.travis.yml
@@ -1,5 +1,7 @@
 language: java
+sudo: false # faster builds
 
-install:
-- mvn -N io.takari:maven:wrapper
-- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script: "mvn cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
