--- a/JavaOdevi/.travis.yml
+++ b/JavaOdevi/.travis.yml
@@ -1,3 +1,8 @@
+
 language: java
-sudo: false
-script: mvn clean verify
+
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
+script: "bundle exec rake && RAILS_ENV=production bundle exec rake assets:precompile:primary"
